PokeDexPackage/main/default/objects/Move__c/Move__c.object-meta.xml
<CustomObject>
    <description>Moves are the skills of Pokémon in battle. In battle, a Pokémon uses one move each turn. Some moves (including those learned by Hidden Machine) can be used outside of battle as well, usually for the purpose of removing obstacles or exploring new areas.</description>
    <label>Move</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Moves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>