PokeDexPackage/main/default/objects/Move__c/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <description>The percent value of how likely this move is to be successful.</description>
    <label>Accuracy Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>