PokeDexPackage/main/default/objects/Move__c/fields/Effect_Chance__c.field-meta.xml
<CustomField>
    <fullName>Effect_Chance__c</fullName>
    <description>The percent value of how likely it is this moves effect will happen.</description>
    <label>Effect Chance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>