PokeDexPackage/main/default/objects/Move__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>The identifier for this resource in the api.</description>
    <label>Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>