PokeDexPackage/main/default/objects/Move__c/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <description>The base power of this move with a value of 0 if it does not have a base power.</description>
    <label>Power</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>