PokeDexPackage/main/default/objects/Move__c/fields/Power_Points__c.field-meta.xml
<CustomField>
    <fullName>Power_Points__c</fullName>
    <description>Power points. The number of times this move can be used.</description>
    <label>Power Points</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>