PokeDexPackage/main/default/objects/Move__c/fields/PP__c.field-meta.xml
<CustomField>
    <fullName>PP__c</fullName>
    <description>Power points. The number of times this move can be used.</description>
    <label>PP</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>