PokeDexPackage/main/default/objects/Move__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>A value between -8 and 8. Sets the order in which moves are executed during battle.</description>
    <label>Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>