PokeDexPackage/main/default/objects/Move__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The elemental type of this move.</description>
    <label>Type</label>
    <referenceTo>Type__c</referenceTo>
    <relationshipLabel>Moves</relationshipLabel>
    <relationshipName>Moves</relationshipName>
    <type>Lookup</type>
</CustomField>